test/corpus/expr_arithmetic.txt
================================================================================
reference examples
================================================================================

2#10 band 2#01

2#10 bor 2#01

1 bsl (1 bsl 64)

--------------------------------------------------------------------------------

(source_file
  (expr_op
    (expr_operator_binary
      (integer)
      (integer)))
  (expr_op
    (expr_operator_binary
      (integer)
      (integer)))
  (expr_op
    (expr_operator_binary
      (integer)
      (expr_op
        (expr_operator_binary
          (integer)
          (integer))))))
