test/corpus/expr_block.txt
================================================================================
single expression
================================================================================

begin
  A
end

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_begin_block
      (expression
        (variable)))))

================================================================================
multiple expressions
================================================================================

begin
  A,
  B
end

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_begin_block
      (expression
        (variable))
      (expression
        (variable)))))
