test/corpus/expr_function_call.txt
================================================================================
apply lambda without args
================================================================================

Lambda()

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (computed_function_name
        (variable)))))

================================================================================
apply lambda with args
================================================================================

Lambda(1)
Lambda(1,2,3)

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (computed_function_name
        (variable))
      (expression
        (integer))))
  (expression
    (function_call
      (computed_function_name
        (variable))
      (expression
        (integer))
      (expression
        (integer))
      (expression
        (integer)))))

================================================================================
nested lambda application
================================================================================

Op(1, Lambda(1,2,3))

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (computed_function_name
        (variable))
      (expression
        (integer))
      (expression
        (function_call
          (computed_function_name
            (variable))
          (expression
            (integer))
          (expression
            (integer))
          (expression
            (integer)))))))

================================================================================
qualified function call without args
================================================================================

local:function()

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (qualified_function_name
        (atom)
        (atom)))))

================================================================================
qualified function call with args
================================================================================

local:function(1)
local:function(1,2,3)

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (qualified_function_name
        (atom)
        (atom))
      (expression
        (integer))))
  (expression
    (function_call
      (qualified_function_name
        (atom)
        (atom))
      (expression
        (integer))
      (expression
        (integer))
      (expression
        (integer)))))

================================================================================
nested qualified function calls
================================================================================

local:op(1, local:function(1,2,3))

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (qualified_function_name
        (atom)
        (atom))
      (expression
        (integer))
      (expression
        (function_call
          (qualified_function_name
            (atom)
            (atom))
          (expression
            (integer))
          (expression
            (integer))
          (expression
            (integer)))))))

================================================================================
local function call without args
================================================================================

local_function().

--------------------------------------------------------------------------------

(source_file
  (expression
    (atom))
  (ERROR))

================================================================================
local function call with args
================================================================================

A = local_function(1)

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (variable))
      (expression
        (function_call
          (computed_function_name
            (atom))
          (expression
            (integer)))))))

================================================================================
nested local function calls
================================================================================

A = local_op(1, local_function(1))

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (variable))
      (expression
        (function_call
          (computed_function_name
            (atom))
          (expression
            (integer))
          (expression
            (function_call
              (computed_function_name
                (atom))
              (expression
                (integer)))))))))

================================================================================
mixed function calls
================================================================================

module:function(Lambda(1, 'local$function'(1,2,3)))

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (qualified_function_name
        (atom)
        (atom))
      (expression
        (function_call
          (computed_function_name
            (variable))
          (expression
            (integer))
          (expression
            (function_call
              (computed_function_name
                (atom))
              (expression
                (integer))
              (expression
                (integer))
              (expression
                (integer)))))))))
