test/corpus/expr_list.txt
================================================================================
comprehensions
================================================================================

[ (X*2) || X <- [ 1,2,3 ], X > 2 ]

--------------------------------------------------------------------------------

(source_file
  (expression
    (expr_list_comprehension
      (expression
        (expr_operator
          (expr_operator_binary
            (expression
              (variable))
            (expression
              (integer)))))
      (expr_list_generator
        (expression
          (variable))
        (expression
          (expr_list
            (expression
              (integer))
            (expression
              (integer))
            (expression
              (integer)))))
      (expr_list_filter
        (expression
          (expr_operator
            (expr_operator_binary
              (expression
                (variable))
              (expression
                (integer)))))))))
