test/corpus/expr_match.txt
================================================================================
binding
================================================================================

A = 1

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (variable))
      (expression
        (integer)))))

================================================================================
matching on constants
================================================================================

1 = A

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (integer))
      (expression
        (variable)))))

================================================================================
matching on tuples
================================================================================

{A, 1} = B

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (tuple
          (expression
            (variable))
          (expression
            (integer))))
      (expression
        (variable)))))

================================================================================
matching on maps
================================================================================

#{ a := A } = B

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (map
          (map_entry
            (atom)
            (expression
              (variable)))))
      (expression
        (variable)))))

================================================================================
matching on lists
================================================================================

[] = L
[1|_] = L2
[1, B] = L3
[1, B | T ] = L4

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (expr_list))
      (expression
        (variable))))
  (expression
    (match
      (expression
        (expr_list
          (expr_list_cons
            (expression
              (integer))
            (expression
              (variable)))))
      (expression
        (variable))))
  (expression
    (match
      (expression
        (expr_list
          (expression
            (integer))
          (expression
            (variable))))
      (expression
        (variable))))
  (expression
    (match
      (expression
        (expr_list
          (expr_list_cons
            (expression
              (integer))
            (expression
              (variable))
            (expression
              (variable)))))
      (expression
        (variable)))))

================================================================================
ignoring match
================================================================================

_ = 1

--------------------------------------------------------------------------------

(source_file
  (expression
    (match
      (expression
        (variable))
      (expression
        (integer)))))
