test/corpus/expr_variable.txt
===============================================================================
named
===============================================================================

A

---

(source_file (expression (variable)))

===============================================================================
ignored variable
===============================================================================

_A

---

(source_file (expression (variable)))
