test/corpus/module_attribute.txt
===============================================================================
name attribute
===============================================================================

-module(name).

---

(source_file (module_name (atom (unquoted_atom))))


===============================================================================
export attribute
===============================================================================

-export([hello/0, what/1]).

---

(source_file (module_export (atom (unquoted_atom)) (integer) (atom (unquoted_atom)) (integer)))
