test/corpus/term_atom.txt
===============================================================================
simple
===============================================================================

atom

---

(source_file (term (atom (unquoted_atom))))

===============================================================================
simple with symbol
===============================================================================

a_to_mic

---

(source_file (term (atom (unquoted_atom))))

===============================================================================
simple with number
===============================================================================

atom1

---

(source_file (term (atom (unquoted_atom))))

===============================================================================
mixed case
===============================================================================

anAtom

---

(source_file (term (atom (unquoted_atom))))

===============================================================================
mixed case with number
===============================================================================

anAtom9

---

(source_file (term (atom (unquoted_atom))))


===============================================================================
quoted atom
===============================================================================

'atom'

---

(source_file (term (atom (quoted_atom))))

===============================================================================
quoted atom with number
===============================================================================

'atom'

---

(source_file (term (atom (quoted_atom))))

===============================================================================
quoted atom with symbols
===============================================================================

'a.to!m"ic_0#%@^&*()}{[]'

---

(source_file (term (atom (quoted_atom))))
