test/corpus/term_char.txt
================================================================================
alphanum
================================================================================

$a

--------------------------------------------------------------------------------

(source_file
  (expression
    (char)))
