test/corpus/term_float.txt
===============================================================================
small
===============================================================================

0.0

---

(source_file (term (float)))

===============================================================================
large
===============================================================================

100000.25974069347221723

---

(source_file (term (float)))

===============================================================================
exponential notation
===============================================================================

2.5974069347221725e195

---

(source_file (term (float)))
