test/corpus/term_fun.txt
================================================================================
constant without args
================================================================================

fun () -> ok end

--------------------------------------------------------------------------------

(source_file
  (expression
    (lambda
      (lambda_clause
        (expression
          (atom
            (unquoted_atom)))))))

================================================================================
identity function
================================================================================

fun (X) -> X end

--------------------------------------------------------------------------------

(source_file
  (expression
    (lambda
      (lambda_clause
        (pattern
          (variable))
        (expression
          (variable))))))

================================================================================
multiple clauses
================================================================================

fun
  ([]) -> ok;
  (Args) -> Args
end

--------------------------------------------------------------------------------

(source_file
  (expression
    (lambda
      (lambda_clause
        (pattern
          (pat_list))
        (expression
          (atom
            (unquoted_atom))))
      (lambda_clause
        (pattern
          (variable))
        (expression
          (variable))))))
